@@ -31,9 +31,10 @@ New config options:
 
 Internal:
 - $interface->beep() function for cross-platform beep support.
+- OpenKore will exit if a plugin failed to load.
 
 Credits:
-- asuwannarat: tRO server details.
+- asuwannarat, as2765324: tRO server details.
 
 
 ==================
